--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -8,3 +8,4 @@ jobs:
       - uses: ludeeus/action-shellcheck@2.0.0
         with:
           scandir: ./scripts
+          severity: error    # <- fail only on errors; warnings (e.g., SC2024) won't fail the job
